src/main/java/com/example/betteriter/global/error/ErrorResponse.java
package com.example.betteriter.global.error;

public class ErrorResponse {
}
